Fix spacing after mobile orientation change. Tidy up expand on mobile.

--- a/client/statuswolf.css
+++ b/client/statuswolf.css
@@ -101,7 +101,7 @@ button {
 }
 
 .expanded-status .valign-wrapper, .expanded-status h3 {
-    height: 9em !important;
+    height: 5em !important;
 }
 
 .status .valign-wrapper {
@@ -172,6 +172,10 @@ button {
     #menu-bar button {
         margin-top: 0.2em;
     }
+
+    .expanded-status {
+        height: 20rem !important;
+    }
 }
 
 @media (max-width: 1210px) and (max-device-width: 720px) and (orientation: portrait) {
@@ -189,5 +193,9 @@ button {
 
     .status {
         height: 13.5rem;
+    }
+
+    .traffic-light {
+        font-size: 13.5rem;
     }
 }
